feat(go): re-initialize entire project
