# api/api.gen.go
@@ -2,7 +2,7 @@
 
 // Package api provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
 import (
@@ -102,11 +102,17 @@ type GetVersionsParams struct {
 	Tags        *string `form:"tags,omitempty" json:"tags,omitempty"`
 }
 
+// RegisterGroupJSONRequestBody defines body for RegisterGroup for application/json ContentType.
+type RegisterGroupJSONRequestBody = Group
+
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 
 	// (GET /groups)
 	GetGroups(w http.ResponseWriter, r *http.Request)
+
+	// (POST /groups)
+	RegisterGroup(w http.ResponseWriter, r *http.Request)
 
 	// (GET /groups/{groupID})
 	GetGroup(w http.ResponseWriter, r *http.Request, groupID GroupID)
@@ -138,6 +144,20 @@ func (siw *ServerInterfaceWrapper) GetGroups(w http.ResponseWriter, r *http.Requ
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetGroups(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// RegisterGroup operation middleware
+func (siw *ServerInterfaceWrapper) RegisterGroup(w http.ResponseWriter, r *http.Request) {
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.RegisterGroup(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -464,6 +484,7 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 	}
 
 	m.HandleFunc("GET "+options.BaseURL+"/groups", wrapper.GetGroups)
+	m.HandleFunc("POST "+options.BaseURL+"/groups", wrapper.RegisterGroup)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}", wrapper.GetGroup)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts", wrapper.GetArtifacts)
 	m.HandleFunc("GET "+options.BaseURL+"/groups/{groupID}/artifacts/{artifactID}", wrapper.GetArtifact)
@@ -485,6 +506,23 @@ type GetGroups200JSONResponse Groups
 func (response GetGroups200JSONResponse) VisitGetGroupsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type RegisterGroupRequestObject struct {
+	Body *RegisterGroupJSONRequestBody
+}
+
+type RegisterGroupResponseObject interface {
+	VisitRegisterGroupResponse(w http.ResponseWriter) error
+}
+
+type RegisterGroup201JSONResponse Group
+
+func (response RegisterGroup201JSONResponse) VisitRegisterGroupResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(201)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -607,6 +645,9 @@ type StrictServerInterface interface {
 	// (GET /groups)
 	GetGroups(ctx context.Context, request GetGroupsRequestObject) (GetGroupsResponseObject, error)
 
+	// (POST /groups)
+	RegisterGroup(ctx context.Context, request RegisterGroupRequestObject) (RegisterGroupResponseObject, error)
+
 	// (GET /groups/{groupID})
 	GetGroup(ctx context.Context, request GetGroupRequestObject) (GetGroupResponseObject, error)
 
@@ -669,6 +710,37 @@ func (sh *strictHandler) GetGroups(w http.ResponseWriter, r *http.Request) {
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(GetGroupsResponseObject); ok {
 		if err := validResponse.VisitGetGroupsResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// RegisterGroup operation middleware
+func (sh *strictHandler) RegisterGroup(w http.ResponseWriter, r *http.Request) {
+	var request RegisterGroupRequestObject
+
+	var body RegisterGroupJSONRequestBody
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		sh.options.RequestErrorHandlerFunc(w, r, fmt.Errorf("can't decode JSON body: %w", err))
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.RegisterGroup(ctx, request.(RegisterGroupRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "RegisterGroup")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(RegisterGroupResponseObject); ok {
+		if err := validResponse.VisitRegisterGroupResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
